# lenta_ru_topics_clf

./: .gitignore  README.md  pyproject.toml
notebooks/: custom_vectorizer.ipynb  data_overview.ipynb  train_and_evaluation.ipynb
scripts/: build_dataset.py  build_tokens.py  evaluate_model.py  train_model.py
src/lenta_topic/: config.py  data.py  evaluate.py  preprocess.py  tokenize.py  train.py  train_test_split.py  vectorizer.py
